alignment issues

--- a/app/components/release-bucket.component.css
+++ b/app/components/release-bucket.component.css
@@ -33,11 +33,27 @@ body {padding: 10px;}
 }
 
 
-.bucket {
-	margin: 10px 10px 30px 10px;
-	height: 100px;
-	width: 70px;
+.bucket__container {
 	position: relative;
+	width: 88px;
+	height: 88px;
+}
+
+.bucket__background-circle {
+	position: absolute;
+	border-radius: 50%;
+	width: 88px;
+	height: 88px;
+	background-color: #f4f4f4;
+	border: 1px solid #ebebeb;
+}
+
+.bucket {
+	position: relative;
+	height: 53px;
+	width: 37px;
+	left: 25px;
+	top: 13px;
 }
 
 .bucket__measurements {
@@ -48,18 +64,23 @@ body {padding: 10px;}
 	padding-left: 3px;
 	padding-right: 3px;
 }
+
 .bucket__measurement {
 	flex: 0 0 0;
 }
+
 .done-work {
 	background-color: #09A582;
 }
+
 .remaining-work {
 	background-color: #5F9FCB;
 }
+
 .free-capacity {
 	background-color: transparent;
 }
+
 .over-capacity {
 	background-color: #FE4554;
 }
@@ -104,7 +125,7 @@ body {padding: 10px;}
 	width: 10px;
 	height: 10px;
 	background-color: black;
-	left: 62px;
+	left: 29px;
 	right: 0;
 	bottom: 95%;
 }
